// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartAndTransactionItems /> Check how renders Should render everything with one seller and one cart item 1`] = `
<DocumentFragment>
  <div
    class="sc-crrsfI fvpbQF"
  >
    <span
      class="sc-jSgupP dapyFi"
      color=""
      display="block"
      overflow="visible"
      size="3"
      spacing="0px"
      transform=""
    >
      <span>
        seller 
      </span>
      <a
        data-testid="CartAndTransactionItems-seller-link"
      >
        <span
          class="sc-jrAGrp cfzRYv"
        >
          user1
        </span>
      </a>
    </span>
    <div
      class="sc-gKsewC kNJdCK"
      data-testid="CartItem"
    >
      <div
        class="photo-and-name"
      >
        <a
          data-testid="CartItem-product-link-photo"
        >
          <div
            class="sc-bdfBwQ cSJPGs sc-eCssSg gJTqye"
            data-testid="ProductThumbnail"
            direction="row"
            height="7"
            spacing=""
            width="7"
            wrap="nowrap"
          >
            <img
              alt="product name"
              data-testid="ProductThumbnail-img"
              src="no-photo.png"
            />
          </div>
        </a>
        <span
          class="name"
        >
          <a
            data-testid="CartItem-product-link-name"
          >
            product name
          </a>
        </span>
      </div>
      <div
        class="mobile-lower-row"
      >
        <div
          class="choose-quantity-box"
        >
          <div
            class="sc-pFZIQ hgBHyW"
          >
            <button
              class="button minus"
              data-testid="ChooseQuantity-minus-btn"
              disabled=""
              type="button"
            >
              <div
                class="sc-fubCfw iuWfXe"
                color="#DADFE1"
                data-testid="ChooseQuantity-minus-icon"
              >
                <svg>
                  minus.svg
                </svg>
              </div>
            </button>
            <input
              class="sc-iBPRYJ eTbKPo"
              data-testid="NumberInput-quantity"
              name="quantity"
              type="number"
              value="1"
            />
            <button
              class="button plus"
              data-testid="ChooseQuantity-plus-btn"
              type="button"
            >
              <div
                class="sc-fubCfw irUaNG"
                color=""
                data-testid="ChooseQuantity-plus-icon"
              >
                <svg>
                  plus.svg
                </svg>
              </div>
            </button>
          </div>
          <span
            class="sc-jSgupP jgbVDP"
            color=""
            data-testid="CartItem-available-quantity"
            display="inline-block"
            overflow="visible"
            size="2"
            spacing="0px"
            transform=""
          >
            of 2
          </span>
        </div>
        <div
          class="price-box"
        >
          <span
            class="sc-jSgupP esalpy"
            color=""
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $2
          </span>
        </div>
      </div>
      <div
        class="sc-fubCfw eICEUr remove-icon"
        color="#F22613"
      >
        <svg>
          trash.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CartAndTransactionItems /> Check how renders Should render everything with two sellers, each with one transaction item 1`] = `
<DocumentFragment>
  <div
    class="sc-crrsfI fvpbQF"
  >
    <span
      class="sc-jSgupP dapyFi"
      color=""
      display="block"
      overflow="visible"
      size="3"
      spacing="0px"
      transform=""
    >
      <span>
        seller 
      </span>
      <a
        data-testid="CartAndTransactionItems-seller-link"
      >
        <span
          class="sc-jrAGrp cfzRYv"
        >
          user1
        </span>
      </a>
    </span>
    <div
      class="sc-bdfBwQ ZqsAz sc-gsTCUz inazTm"
      data-testid="TransactionAndOrderProdItem"
      direction="row"
      spacing="2"
      width="100%"
      wrap="nowrap"
    >
      <a
        data-testid="TransactionAndOrderProdItem-product-link-photo"
      >
        <div
          class="sc-bdfBwQ igmTYO sc-eCssSg eawKUo"
          data-testid="ProductThumbnail"
          direction="row"
          height="5"
          spacing=""
          width="5"
          wrap="nowrap"
        >
          <img
            alt="product name"
            data-testid="ProductThumbnail-img"
            src="no-photo.png"
          />
        </div>
      </a>
      <div
        class="sc-dlfnbm cjrVjg"
      >
        <span
          class="name"
        >
          <a
            data-testid="TransactionAndOrderProdItem-product-link-name"
          >
            product name
          </a>
        </span>
        <div
          class="sc-bdfBwQ lgjdug sc-hKgILt huHHva"
          direction="row"
          spacing=""
          width="100%"
          wrap="nowrap"
        >
          <span
            class="sc-jSgupP jUhfHv"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="2"
            spacing="0px"
            transform=""
          >
            1 x $2
          </span>
          <span
            class="sc-jSgupP jiAuFg"
            color=""
            display="inline-block"
            overflow="visible"
            size="4"
            spacing="0px"
            transform=""
          >
            $2
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-crrsfI fvpbQF"
  >
    <span
      class="sc-jSgupP dapyFi"
      color=""
      display="block"
      overflow="visible"
      size="3"
      spacing="0px"
      transform=""
    >
      <span>
        seller 
      </span>
      <a
        data-testid="CartAndTransactionItems-seller-link"
      >
        <span
          class="sc-jrAGrp cfzRYv"
        >
          user2
        </span>
      </a>
    </span>
    <div
      class="sc-bdfBwQ ZqsAz sc-gsTCUz inazTm"
      data-testid="TransactionAndOrderProdItem"
      direction="row"
      spacing="2"
      width="100%"
      wrap="nowrap"
    >
      <a
        data-testid="TransactionAndOrderProdItem-product-link-photo"
      >
        <div
          class="sc-bdfBwQ igmTYO sc-eCssSg eawKUo"
          data-testid="ProductThumbnail"
          direction="row"
          height="5"
          spacing=""
          width="5"
          wrap="nowrap"
        >
          <img
            alt="product name"
            data-testid="ProductThumbnail-img"
            src="no-photo.png"
          />
        </div>
      </a>
      <div
        class="sc-dlfnbm cjrVjg"
      >
        <span
          class="name"
        >
          <a
            data-testid="TransactionAndOrderProdItem-product-link-name"
          >
            product name
          </a>
        </span>
        <div
          class="sc-bdfBwQ lgjdug sc-hKgILt huHHva"
          direction="row"
          spacing=""
          width="100%"
          wrap="nowrap"
        >
          <span
            class="sc-jSgupP jUhfHv"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="2"
            spacing="0px"
            transform=""
          >
            1 x $2
          </span>
          <span
            class="sc-jSgupP jiAuFg"
            color=""
            display="inline-block"
            overflow="visible"
            size="4"
            spacing="0px"
            transform=""
          >
            $2
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
